json hecho solo falta crear alumno

--- a/Index.html
+++ b/Index.html
@@ -2,8 +2,10 @@
 <html>
 	<head>
 		<title>Sombrero Selector</title>
+		<meta content="text/html";charset="utf-8"/>
 		<link rel="stylesheet" type="text/css" href="Estilos/estilo_index.css">
-		<script type="module" src="/JS/main.js"></script>
+		<script type="text/javascript" src="/JS/main.js"></script>
+		<script type="module" src="/JS/Alumnos.js"></script>
 	</head>
 	<body>
 		<section>
@@ -13,15 +15,15 @@
 				</div>
 				<img src="Imagenes/Sombrero.jpg" alt="Sombrero selector">
 				<div id="BotonesPresentacion">
-					<button onclick="mostrarPreguntas()">¿A que casa pertenezco?</button>
-					<button onclick="mostrarDatosColegio()">Información sobre las casas</button>
+					<button onclick="mostrarPreguntas()">A que casa pertenezco?</button>
+					<button onclick="mostrarDatosColegio()">Informacion sobre las casas</button>
 					<button onclick="">Mostrar estudiantes</button>
 				</div>
 			</div>
 			<div id="Cuestionario">
 				<h1>Bloque de preguntas</h1>
 					<div id="CuestParte1" class="Cuestionario">
-						<h2>¿Que asignatura suspenderias en Hogwarts?</h2>
+						<h2>Que asignatura suspenderias en Hogwarts?</h2>
 						<div class="Preguntas">
 							<form action="" method="post">
 								<input type="radio" name="asignaturas" value="astronomia"><label>Astronomia</label>
@@ -45,7 +47,7 @@
 						</div>
 					</div>
 					<div id="CuestParte3" class="Cuestionario">
-						<h2>¿Que ser te aterra mas?</h2>
+						<h2>Que ser te aterra mas?</h2>
 						<form action="" method="post">
 							<div class="Preguntas">
 									<div class="carta">
@@ -72,13 +74,13 @@
 						</form>
 					</div>
 					<div id="CuestParte4" class="Cuestionario">
-						<h2>¿ Cual de estos grupos palabras te describen mas?</h2>
+						<h2>Cual de estos grupos palabras te describen mas?</h2>
 						<div class="Preguntas">
 							<form action="" method="post">
 								<input type="radio" name="palabras" value="Gryffindor"><label>Valor, audacia y caballerosidad</label>
 								<input type="radio" name="palabras" value="Hufflepuff"><label>Justicia, lealtad y paciencia</label><br>
-								<input type="radio" name="palabras" value="Ravenclaw"><label>Inteligencia, erudición, creatividad</label>
-								<input type="radio" name="palabras" value="Slytherin"><label>Ambición, determinación y astucia</label>
+								<input type="radio" name="palabras" value="Ravenclaw"><label>Inteligencia, erudicion, creatividad</label>
+								<input type="radio" name="palabras" value="Slytherin"><label>Ambicion, determinacion y astucia</label>
 							</form>
 						</div>
 					</div>
